Adding dependencies and minor changes

--- a/roles/terminal/templates/starship.toml.j2
+++ b/roles/terminal/templates/starship.toml.j2
@@ -17,7 +17,7 @@ command_timeout = 500
 # disabled = false
 
 [username]
-style_user = "blue bold"
+style_user = "white bold"
 style_root = "red bold"
 format = "[$user]($style)"
 disabled = false
@@ -25,7 +25,7 @@ show_always = true
 
 [hostname]
 ssh_only = false
-format = "[@](blue bold)[$hostname](white bold) "
+format = "[@](red bold)[$hostname](white bold) "
 # trim_at = ".companyname.com"
 disabled = false
 
